# cfd-from-zero-to-hero

./: .gitignore  LICENSE  README.md
1D/: 1-Advection_1D.py  2-Diffusion_1D.py  3.1-Burgers_1D_inviscide.py  3.2-Burgers_1D_visqueux.py  4.1-Euler_1D.py  4.2-Navier_Stokes_1D.py  4.3-Euler_Tuyere_1D.py
2D/: 5.1-Advection_2D.py  5.2-Advection_obstacle_2D.py  5.3-Diffusion_2D.py  6.1-Navier_Stokes_2D_solid_BC.py  7.1-Lattice_Boltzmann_BC.py
Euler_2D_compressible/: CMakeLists.txt  config.txt  euler  structure.txt
Euler_2D_compressible/include/: params.hpp  renderer_colormap.hpp  simulation.hpp  utils.hpp
Euler_2D_compressible/src/: advection.cpp  boundary.cpp  init.cpp  main.cpp  params.cpp  renderer_colormap.cpp  simulation.cpp  utils.cpp
NS_2D_compressible/: CMakeLists.txt  config.txt  navier_stokes  structure.txt
NS_2D_compressible/include/: advection.hpp  boundary.hpp  diffusion.hpp  init.hpp  params.hpp  renderer_colormap.hpp  simulation.hpp  utils.hpp
NS_2D_compressible/src/: advection.cpp  boundary.cpp  diffusion.cpp  init.cpp  main.cpp  params.cpp  simulation.cpp  utils.cpp
NS_2D_incompressible/: CMakeLists.txt  Makefile  Petit code.txt  code terminal.txt  conanfile.txt  config.txt  config_.txt  navier_stokes  structure.txt
NS_2D_incompressible/Z_OLD_CODE_SAVE/: poisson_25_04_30.cpp  poisson_25_04_30_.cpp
NS_2D_incompressible/include/: advection.hpp  boundary.hpp  diffusion.hpp  init.hpp  params.hpp  poisson.hpp  renderer_colormap.hpp  simulation.hpp  utils.hpp
NS_2D_incompressible/src/: advection.cpp  boundary.cpp  diffusion.cpp  init.cpp  main.cpp  params.cpp  poisson.cpp  renderer_colormap.cpp  simulation.cpp  utils.cpp
